# interval-maps

./: LICENSE  interval-maps.cabal  shell.nix
src/Data/: IntervalMap.hs
tests/: Main.hs
