cabal-version:       >=1.10
name:                interval-maps
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Tom Feron
maintainer:          thomas.feron@redspline.com
category:            Data
build-type:          Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:     Data.IntervalMap

  build-depends:       base >=4.12 && <5

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  default-language:    Haskell2010
  main-is:             Main.hs

  build-depends:       base
                     , hedgehog
                     , interval-maps
                     , tasty
                     , tasty-hedgehog
